parameterization - cast redundancy and minor fixes